--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,20 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
 
 [packages]
 django = "*"
 djangorestframework = "*"
-djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
+python-decouple = "*"
+django-phonenumber-field = "*"
+phonenumbers = "*"
+pillow = "*"
+whitenoise = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
