--- a/Pipfile
+++ b/Pipfile
@@ -15,9 +15,10 @@ django-phonenumber-field = "*"
 phonenumbers = "*"
 pillow = "*"
 whitenoise = "*"
+black = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
 
 [pipenv]
 allow_prereleases = true
