Upgraded to Python version 3.9

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ phonenumbers = "*"
 pillow = "*"
 whitenoise = "*"
 black = "*"
+djangorestframework-simplejwt = "*"
+requests = "*"
 
 [requires]
 python_version = "3.9"
