refactored codebase and added priority in models

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ whitenoise = "*"
 djangorestframework-simplejwt = "*"
 requests = "*"
 black = "*"
+serpy = "*"
 
 [requires]
 python_version = "3.8"
