--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,10 @@ requests = "*"
 black = "*"
 serpy = "*"
 six = "*"
+pandas = "*"
+openpyxl = "*"
+xlsxwriter = "*"
+xlrd = "*"
 
 [requires]
 python_version = "3.8"
